Added Wi-Fi qr preview info

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1781,4 +1781,6 @@
     <string name="qr_type_sms">SMS</string>
     <string name="qr_type_url">URL</string>
     <string name="qr_type_wifi">Wi-Fi</string>
+    <string name="open_network">Open network</string>
+    <string name="not_specified">N/A</string>
 </resources>
