--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ ImageToolbox is an image editor for android
   ~ Copyright (c) 2025 T8RIN (Malik Mukhametzyanov)
   ~
@@ -14,7 +13,8 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+  -->
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name" translatable="false">Image Toolbox</string>
     <string name="app_launcher_name" translatable="false">Image Toolbox</string>
     <string name="file_provider" translatable="false">com.t8rin.imagetoolbox.fileprovider</string>
@@ -1783,4 +1783,28 @@
     <string name="qr_type_wifi">Wi-Fi</string>
     <string name="open_network">Open network</string>
     <string name="not_specified">N/A</string>
+    <string name="ssid">SSID</string>
+    <string name="phone">Phone</string>
+    <string name="message">Message</string>
+    <string name="address">Address</string>
+    <string name="subject">Subject</string>
+    <string name="body">Body</string>
+    <string name="name">Name</string>
+    <string name="organization">Organization</string>
+    <string name="title">Title</string>
+    <string name="phones">Phones</string>
+    <string name="emails">Emails</string>
+    <string name="urls">URLs</string>
+    <string name="addresses">Addresses</string>
+    <string name="summary">Summary</string>
+    <string name="description">Description</string>
+    <string name="location">Location</string>
+    <string name="organizer">Organizer</string>
+    <string name="start_date">Start date</string>
+    <string name="end_date">End date</string>
+    <string name="status">Status</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="create_barcode">Create Barcode</string>
+    <string name="edit_barcode">Edit Barcode</string>
 </resources>
