Added ability to create different common barcode types (WiFi, Email, Geolocation, Phone, SMS, Contact, Calendar event) by #2206

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1807,4 +1807,5 @@
     <string name="longitude">Longitude</string>
     <string name="create_barcode">Create Barcode</string>
     <string name="edit_barcode">Edit Barcode</string>
+    <string name="wifi_configuration">Wi-Fi configuration</string>
 </resources>
