Added ability to create different common barcode types (WiFi, Email, Geolocation, Phone, SMS, Contact, Calendar event)

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1808,4 +1808,5 @@
     <string name="create_barcode">Create Barcode</string>
     <string name="edit_barcode">Edit Barcode</string>
     <string name="wifi_configuration">Wi-Fi configuration</string>
+    <string name="security">Security</string>
 </resources>
