--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1836,4 +1836,6 @@
     <string name="error_correction_level">Error correction level</string>
     <string name="dark_color">Dark color</string>
     <string name="light_color">Light color</string>
+    <string name="hyper_os">Hyper OS</string>
+    <string name="hyper_os_sub">Xiaomi HyperOS like style</string>
 </resources>
