--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1840,4 +1840,5 @@
     <string name="hyper_os_sub">Xiaomi HyperOS like style</string>
     <string name="mask_pattern">Mask pattern</string>
     <string name="code_may_be_not_scannable">This code may be not scannable, change appearance params to make it readable with all devices</string>
+    <string name="not_scannable">Not scannable</string>
 </resources>
